--- a/project.config
+++ b/project.config
@@ -1,4 +1,8 @@
-[access]
-	inheritFrom = All-Projects
+[access "refs/*"]
+        owner = group android_device_motorola_osprey
+                label-Verified = -1..+1 group android_device_motorola_osprey
+[receive]
+        requireChangeId = true
 [submit]
-	action = inherit
+        mergeContent = true
+        action = merge always
